--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,9 +17,13 @@
 
       <div id="container">
          <%- body %>
+         <div class="contact">
+                  for more info please contact <a href="mailto:tombooth@gmail.com">tom booth</a> or <a href="mailto:jim.higson@gmail.com">jim higson</a>
+                  </div>
       </div>
          <iframe src="http://nodeknockout.com/iframe/team-ig" frameborder=0 scrolling=no allowtransparency=true width=115 height=25>
          </iframe>
+
 
    </body>
 </html>
