--- a/views/create_game.ejs
+++ b/views/create_game.ejs
@@ -1,7 +1,7 @@
 
 <h3>GLOBAL PACMAN SYSTEM</h3>
 
-<ul class="menu">
+<ul class="menu maps">
 	<li>
 		<a href="/create_map">Create a new map</a>
 	</li>
@@ -10,12 +10,14 @@
 	</li>
    <% _(maps).each(function(map) { %>
       <li>
-         <a href="#" class="map" data-map="<%=map%>"><%=map%></a>
+         <a href="#" class="map" data-map="<%=map.id%>" data-long="<%=map.centre.long%>" data-lat="<%=map.centre.lat%>"><%=map.id%></a>
       </li>
    <% }); %>
 </ul>
 
 <script type="text/javascript">
+
+$(function() {
 
 	$('.map').bind('click', function(evt) {
 		$.ajax('/api/game/create', {
@@ -28,5 +30,26 @@
 			}
 		});
 	});
+
+   var geocoder = new google.maps.Geocoder();
+
+   $('.map').each(function() {
+      var elem = $(this),
+          long = elem.data('long'),
+          lat = elem.data('lat');
+
+      geocoder.geocode({ latLng: new google.maps.LatLng(lat, long) }, function(result, status) {
+
+         var location = _.reduce(result[0].address_components, function(s, c) { 
+            if (_.any(c.types, function(type, num, types) { return ['administrative_area_level_1', 'administrative_area_level_2', 'country'].indexOf(type) >= 0; })) s.push(c.long_name);
+            return s; 
+         }, [ ]).join(', ');
+
+         elem.append('<div>' + location + '</div>');
+      });
+   });
+
+});
+      
 
 </script>
