--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js" type="text/javascript" charset="utf-8"></script>
       <script src="/static/scripts/underscore.js" type="text/javascript" charset="utf-8"></script>
+      <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
 
       <div id="container">
          <%- body %>
