--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
    </head>
    <body onload="setTimeout(function() { window.scrollTo(0, 1) }, 100);">
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/static/scripts/jquery-1.6.2.min.js" type="text/javascript" charset="utf-8"></script>
       <script src="/static/scripts/underscore.js" type="text/javascript" charset="utf-8"></script>
       <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
 
