--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,8 +1,14 @@
+<div class="modal">
+   <label for="nickname">nickname:</label>
+   <input type="text name="nickname" id="nickname" />
+   <button id="join">join</button>
+</div>
+
 <div class="game">
 
    <ul class="game-header">
       <li>score: <span id="score"></span></li>
-      <li><%= game.users[user.id] %></li>
+      <li class="character"></li>
       <li>mode: <span id="mode"><%= game.mode %></span></li>
    </ul> 
    
@@ -15,20 +21,13 @@
 		</canvas>
 	</div>
 
-	<ul class="menu">
-		<li><a href='#' id='leave'>leave this game</a></li>
-		<li><a href='#' id='end'>delete this game</a></li>
-	</ul>
-
 	<span class="gameinfo">current map:</span> <span class='map'><%=map.id%></span>
 	<br/>
-	<span class="gameinfo">created by:</span> <span class='created_by'><%=game.created_by%></span>
-   <br/>
 	<div class="playerlist">
 		<span class="gameinfo">In this game we have:</span>
 		<ul class="list" id="users">
-		<% _(game.users).each( function(character, username){ %>
-			<li class="user"><%=character%> [<%=username%>]</li>
+		<% _(game.users).each( function(user, user_id){ %>
+			<li class="user"><%=user.character%> [<%=user.nickname%>]</li>
 		<% }); %>
 		</ul>
 	</div>
@@ -67,12 +66,15 @@
 	<script type="text/javascript" src="/static/js/cheater.js"></script>
 	<script type="text/javascript" src="/static/js/geom.js"></script>
 	<script type="text/javascript" src="/static/js/coord_translator.js"></script>
+	<script type="text/javascript" src="/static/scripts/uuid.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+   
 	<script type="text/javascript">
 		$(function(){
-			var map_json = <%- JSON.stringify( map ) %>,
+			var my_id = uuid(),
+             map_json = <%- JSON.stringify( map ) %>,
 				 game_json = <%- JSON.stringify( game ) %>,
-				 game_state = new GameState( map_json, game_json, '<%= user.id %>'),
+				 game_state = new GameState(map_json, game_json, my_id),
 			    engine = new Engine( game_state ),
              watcher;
 
@@ -83,15 +85,13 @@
 
 			new Coord_Translator( game_state.bounds, engine.canvas );
 
-			new GameMenu(game_state).init_events();
-
 
 
 			function build_user_list() {
 				$('#users').empty();
 
-				_.each(game_state.users, function(character, username) {
-					$('#users').append($('<li class="user">' + character + ' [' + username + ']</li>'));
+				_.each(game_state.users, function(user, user_id) {
+					$('#users').append($('<li class="user">' + user.character + ' [' + user.nickname + ']</li>'));
 				 });
 			}
 
@@ -108,124 +108,134 @@
 
 
 
+
+
 			var channel_url = window.location.protocol + '//' + window.location.host + '/' + game_state.id,
 				 game_channel = io.connect(channel_url);
 
-         console.log('connected to game channel');
-         console.log(io);
+         $('#join').click(function() {
+            var nickname = $('#nickname').val();
 
-         game_channel.on('join', function() { console.log('we recieved a join message'); });
+            console.log(my_id + ' joining as ' + nickname);
 
-			game_channel.on('move', function(data) {
-            var character = game_state.characters[data.character];
+            game_channel.emit('join', my_id, nickname);
+         });
+
+			game_channel.on('moved', function(name, location) {
+            var character = game_state.characters[name];
 				character.prev_location = character.location;
-            character.location = data.location;
+            character.location = location;
 
             console.log('player [' + character.name + '] at lng:' + character.location.long + ' lat:' + character.location.lat);
 
 				engine.render_frame();
 			});
 
-			game_channel.on('leave', function (user_data) {
-            console.log('leave', user_data);
-            delete game_state.characters[user_data.character];
-            delete game_state.users[user_data.username];
+			game_channel.on('left', function (user_id, name) {
+            game_state.avaliable_characters.push(game_state.characters[name]);
+
+            delete game_state.characters[name];
+            delete game_state.users[user_id];
+
             engine.render_frame();
             build_user_list();
 			});
 
-			game_channel.on('join', function (user_data) {
-            game_state.characters[user_data.character] = { 
-            	username: user_data.username,
-            	location: _.clone(game_state.map.ghost_home),
-               name: user_data.character
+			game_channel.on('joined', function (user_id, nickname, name) {
+            var avaliable = game_state.avaliable_characters, 
+                character = game_state.characters[name] = 
+                  _.detect(avaliable, function(c) { return c.name === name; });
+
+            avaliable.splice(avaliable.indexOf(character), 1);
+
+            character.user_id = user_id;
+            game_state.users[user_id] = { 
+               user_id: user_id,
+               nickname: nickname,
+               character: name
             };
-            game_state.users[user_data.username] = user_data.character;
 
-            console.log('join', user_data);
-            debugger;
+            /*
+             if this in reponse to our own join request then start streaming our
+             position coordinates out to the server
+             */
+            if (user_id === my_id) {
+               engine.render_map();
+               $('.modal').addClass('hidden');
+
+               function update_position(position) {
+                  console.log( 'You moved. Sending', JSON.stringify( position ), 'to the server' );
+                  game_channel.emit('move', position.coords);
+
+                  $('.gps_position .long').text(position.coords.longitude);
+                  $('.gps_position .lat').text(position.coords.latitude);
+                  $('.gps_position .heading').text(position.coords.heading);
+                  var xy = coords.long_lat_to_x_y({long:position.coords.longitude, lat:position.coords.latitude});
+
+                  $('.gps_position .x').text(xy.x.toPrecision(3));
+                  $('.gps_position .y').text(xy.y.toPrecision(3));
+
+                  $('.gps_position .updated').text(new Date().toString());
+               }
+
+               new Cheater(engine, update_position);
+
+               if (window.navigator.geolocation) {
+                  watcher = window.navigator.geolocation.watchPosition(
+                  update_position,
+                  function error( positionError ){
+                     alert( positionError.message, positionError.code );
+                  },
+                  { enableHighAccuracy: true, maximumAge: 0 });
+               }
+            }
 
             engine.render_frame();
             build_user_list();
 			});
 
-			game_channel.on('game_over', function (user_data) {
+			game_channel.on('game_over', function () {
             if (watcher) { window.navigator.geolocation.clearWatch(watcher); }
 				alert( "this game is over" );
 				window.location = window.location.protocol + '//' + window.location.host + '/';
 			});
 
-			game_channel.on('pacman_wins', function (user_data) {
+			game_channel.on('pacman_wins', function () {
 				alert( "pacman has won the game!" );
 				window.location = window.location.protocol + '//' + window.location.host + '/';
 			});
 
-			game_channel.on('pill_eaten', function (data) {
-				game_state.pills = _.filter(game_state.pills, function(pill) { return pill.id !== data.id });
+			game_channel.on('pill_eaten', function (pill_id) {
+				game_state.pills = _.filter(game_state.pills, function(pill) { return pill.id !== pill_id });
 				engine.render_frame();
 			});
 
-			game_channel.on('powerpill_eaten', function (data) {
-				game_state.powerpills = _.filter(game_state.powerpills, function(pill) { return pill.id !== data.id });
+			game_channel.on('powerpill_eaten', function (pill_id) {
+				game_state.powerpills = _.filter(game_state.powerpills, function(pill) { return pill.id !== pill_id });
 				engine.render_frame();
 			});
 
-         game_channel.on('ghost_died', function (data) {
-            game_state.characters[data.id].dead = true;
+         game_channel.on('ghost_died', function (ghost_id) {
+            game_state.characters[ghost_id].dead = true;
             engine.render_frame();
          });
 
-         game_channel.on('ghost_alive', function (data) {
-            game_state.characters[data.id].dead = false;
+         game_channel.on('ghost_alive', function (ghost_id) {
+            game_state.characters[ghost_id].dead = false;
             engine.render_frame();
          });
 
-         game_channel.on('score_changed', function(data) {
-            game_state.score = data.score;
+         game_channel.on('score_changed', function(score) {
+            game_state.score = score;
             update_score();
          });
 
-         game_channel.on('mode_changed', function(data) {
-            game_state.mode = data.mode;
-            console.log('changed game mode to ' + data.mode);
-            $('#mode').text(data.mode);
+         game_channel.on('mode_changed', function(mode) {
+            game_state.mode = mode;
+            console.log('changed game mode to ' + mode);
+            $('#mode').text(mode);
             engine.render_frame();
          });
-
-
-
-
-
-
-         function update_position(position) {
-				console.log( 'You moved. Sending', JSON.stringify( position ), 'to the server' );
-            game_channel.emit('move', { username: game_state.user_id, coords: position.coords });
-
-            $('.gps_position .long').text(position.coords.longitude);
-            $('.gps_position .lat').text(position.coords.latitude);
-            $('.gps_position .heading').text(position.coords.heading);
-            var xy = coords.long_lat_to_x_y({long:position.coords.longitude, lat:position.coords.latitude});
-
-            $('.gps_position .x').text(xy.x.toPrecision(3));
-            $('.gps_position .y').text(xy.y.toPrecision(3));
-
-            $('.gps_position .updated').text(new Date().toString());
-         }
-
-			new Cheater(engine, update_position);
-
-            if (window.navigator.geolocation) {
-               watcher = window.navigator.geolocation.watchPosition(
-               update_position,
-               function error( positionError ){
-                  alert( positionError.message, positionError.code );
-               },
-               { enableHighAccuracy: true, maximumAge: 0 });
-            }
-
-         engine.render_map();
-         engine.render_frame();
-
 
 		});
 	</script>
