--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <h3>GLOBAL PACMAN SYSTEM</h3>
 
 <ul class="menu maps">
-	<li><a href="/create_map">create a new map</a></li>
+	<li><a href="/map/create">create a new map</a></li>
    <li><a href="/help">help</a></li>
 	<li>Start game on map:</li>
    <% _(maps).each(function(map) { %>
