--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,8 +6,12 @@
          GPS: Global Pacman System
       </title>
 
+		<link media="only screen and (max-device-width: 480px)"
+			href="/static/css/mobile.css" type="text/css" rel="stylesheet" />
+		<link media="only screen and (min-device-width: 480px)"
+			href="/static/css/desktop.css" type="text/css" rel="stylesheet" />
+
       <meta name="viewport" content="width=320px, initial-scale=1, maximum-scale=1">
-      <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
 
    </head>
    <body onload="setTimeout(function() { window.scrollTo(0, 1) }, 100);">
