--- a/views/create_map.ejs
+++ b/views/create_map.ejs
@@ -1,10 +1,12 @@
 
+<script type="text/javascript" src="/static/js/map_editor.js" ></script>
+
 <h3>GLOBAL PACMAN SYSTEM</h3>
 
 <label for="name">Map name:</label>
 <input type="text" name="name" id="name" /> 
 
-<div id="map" style="width: 320px; height: 400px;"></div>
+<div id="map" style="width: 100%; height: 400px;"></div>
 
 <select id="vertices" multiple="multiple">
 </select>
@@ -55,5 +57,4 @@
 
 <a href="#" id="create">Create map</a>
 
-<script type="text/javascript" src="/static/js/map_editor.js" ></script>
 
