show ghost home while editing map

--- a/views/create_map.ejs
+++ b/views/create_map.ejs
@@ -65,3 +65,6 @@
 <a href="#" id="create">Create map</a>
 
 
+<div class="ghosts">
+	<img class="ghost red"    src="/static/img/red_ghost.png"/>
+</div>
