show pacman home on game map

--- a/views/create_map.ejs
+++ b/views/create_map.ejs
@@ -1,5 +1,6 @@
 
 
+<script type="text/javascript" src="/static/js/engine.js"></script>
 <script type="text/javascript" src="/static/js/map_view.js"></script>
 <script type="text/javascript" src="/static/js/coord_translator.js"></script>
 <script type="text/javascript" src="/static/js/pacman_map_overlay.js"></script>
@@ -15,7 +16,7 @@
 <label for="name">Map name:</label>
 <input type="text" name="name" id="name" /> 
 
-<div id="map" style="width: 100%; height: 350px;"></div>
+<div id="map" style="width: 100%; height: 400px;"></div>
 
 <br/>
 
