move create map button into map itself, make map wider on desktop

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
          GPS: Global Pacman System
       </title>
 
+		<link href="/static/css/common.css" type="text/css" rel="stylesheet" />
 		<link media="only screen and (max-device-width: 480px)"
 			href="/static/css/mobile.css" type="text/css" rel="stylesheet" />
 		<link media="only screen and (min-device-width: 480px)"
