allow editor to create new points inserted into existing edges

--- a/views/create_map.ejs
+++ b/views/create_map.ejs
@@ -1,5 +1,6 @@
 
 
+<script type="text/javascript" src="/static/js/geom.js"></script>
 <script type="text/javascript" src="/static/js/engine.js"></script>
 <script type="text/javascript" src="/static/js/map_view.js"></script>
 <script type="text/javascript" src="/static/js/coord_translator.js"></script>
